Fixed z-index

--- a/mayhem.css
+++ b/mayhem.css
@@ -44,6 +44,7 @@
 	position: fixed;
 	top: 23px;
 	width: 800px;
+	z-index: 2;
 }
 
 #mes-main-nav a {
